fix dropdown spacing

--- a/styles/dropdown.scss
+++ b/styles/dropdown.scss
@@ -22,6 +22,7 @@
   cursor: pointer;
   border-radius: 1px;
   display: inline-block;
+  vertical-align: bottom;
   position: relative;
   white-space: nowrap;
   max-width: 100%;
